@startuml

interface JSONConvertible<Datapackage>{
+getJSONObject():JSONObject
}

abstract class JSONConverter<Datapackage>{
    +{abstract} convertFromJSONObject(jsonObject:JSONObject):Datapackage
    +convertToJSONObject(Datapackage jsonConvertable):JSONObject
}

abstract class JSONConverter<Datapackage>{
    +{abstract} convertFromJSONObject(jsonObject:JSONObject):Datapackage
    +convertToJSONObject(Datapackage jsonConvertable):JSONObject
}

class DatapackageJSONConverter{

}
JSONConverter <|-- DatapackageJSONConverter
JSONConvertible <|-- Datapackage
JSONConvertible <-- JSONConverter:<<uses>>
Datapackage -left> DatapackageJSONConverter
Datapackage +-left DatapackageJSONConverter


class Datapackage{
+{static}JSON_CONVERTER:DatapackageJSONConverter
+Datapackage(turn:Turn)
+Datapackage(datapackageType:DatapackageType)
}

enum DatapackageType{
        TURN
        RESIGNATION
        DRAW_REQUEST
        DRAW_ACCEPT
        DRAW_REJECT
        PAUSE_REQUEST
        PAUSE_ACCEPT
        PAUSE_REJECT
}


class Turn{
-elapsedTime:long
+Turn(color:ChessColor, move:Move, elapsedTime:long)
}

enum PromotionChoice{
PROMOTE_TO_ROOK
PROMOTE_TO_KNIGHT
PROMOTE_TO_BISHOP
PROMOTE_TO_QUEEN

+{static} getFromInt(i:int):PromotionChoice
+getIntValue():int
}



enum ChessColor{
BLACK
WHITE
{static} getOther(color:ChessColor):ChessColor
{static} getRandom():ChessColor
}

interface Collection<PieceMovement>{

}

class Move{
+Move(originInput:Coordinate, destinationInput:Coordinate)
+Move(pieceMovement:PieceMovement)
}

class PieceMovement{
+PieceMovement(originInput:Coordinate, destinationInput:Coordinate
}



class Coordinate{
-file
-rank
-row
-column
+ {static}getByColumnAndRow(column:int, row:int):Coordinate)
+ {static}getByFileAndRank(file:char, rank:int):Coordinate)
}

abstract class Piece{

}

Turn"*" o-- "1" PromotionChoice: promotionChoice
PromotionChoice --+ Piece
Datapackage --+ DatapackageType
DatapackageType "1" --o "*" Datapackage: datapackageType
Datapackage "1" o-right- "0..1" Turn: turn
Turn "1" o- "1" Move: move
Collection <|-down- Move
Move "*" o-right- "*" PieceMovement:movements
PieceMovement "*" o-right- "1" Coordinate:originInput
PieceMovement "*" o-right- "1" Coordinate:destinationInput
ChessColor "1" --o "*" Turn: color

@enduml